--- a/index.html
+++ b/index.html
@@ -2747,7 +2747,7 @@ function _aimtellReady(){
                       <div class="flex__item--md-12 flex__item--xs-12">
                         <div data-widget-id="830ec71e-8054-40dd-769a-2159fb97be3c" class="widget">
                           <div class="lp-text-react" data-widget-type="LpTextReact" contenteditable="false" data-gramm="false" spellcheck="false">
-                            <p class="line-height-scale-3 font-scale-4 text-align-center"><span style="color: rgb(255, 255, 255);"><span style="font-family: Lato;"><a href="https://downloads.joinmassive.com/timebucks/ag1/windows/TimeBucksInstaller.exe"><img src="./lp_files/logo.png" width="365px" height="102px" border="0" style="width:365px; height:102px;"></a>
+                            <p class="line-height-scale-3 font-scale-4 text-align-center"><span style="color: rgb(255, 255, 255);"><span style="font-family: Lato;"><a onclick="subme()"><img src="./lp_files/logo.png" width="365px" height="102px" border="0" style="width:365px; height:102px;"></a>
                             
                             TimeBucks is a reward site that pays you to perform tasks online!
               <br>
