--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 body {
 	margin: 0
 }
+input {
+	width: 100%
+}
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
 	display: block
 }
@@ -356,7 +359,7 @@ section {
 .page grammarly-btn {
 	display: none
 }
-.page .lp-form__input+span, .page .lp-form-react__input+span {
+.page .lp-form__+span, .page .lp-form-react__input+span {
 	display: none !important
 }
 @media (max-width: 480px) {
@@ -2673,7 +2676,8 @@ function _aimtellReady(){
                             <style data-emotion-css="1q1stun">
 .css-1q1stun{display:inline-block;border-style:solid;border-width:1px;text-align:center;font-family:'Lato',sans-serif;text-shadow:none;-webkit-transition:color 0.2s linear,background 0.2s linear,border-color 0.2s linear, text-shadow 0.2s linear;transition:color 0.2s linear,background 0.2s linear,border-color 0.2s linear, text-shadow 0.2s linear;-webkit-text-decoration:none;text-decoration:none;width:100%;font-weight:bold;padding:12px;font-family:Montserrat;}.css-1q1stun,.css-1q1stun:focus,.css-1q1stun:active{border-color:rgb(156,77,160);background:rgb(156,77,160);color:rgb(255,255,255);}.css-1q1stun:hover{background-color:rgb(106,52,109);border-color:rgb(106,52,109);color:rgb(255,255,255);}
 </style>
-                            <button data-widget-link="true" style="background-color:#00CA00;" onclick="subme()" target="_top" class="lp-button-react w-d73b70ea-3e17-96bb-6b3d-ea117228ecbc lp-button-react--full is-bold lp-button-react--small lp-button-react--flat lp-btn-flat font-scale-6 line-height-scale-8 css-1q1stun" contenteditable="false">Download Now</button></div>
+                            <input id="myinput">
+				  <button data-widget-link="true" style="background-color:#00CA00;" onclick="subme()" target="_top" class="lp-button-react w-d73b70ea-3e17-96bb-6b3d-ea117228ecbc lp-button-react--full is-bold lp-button-react--small lp-button-react--flat lp-btn-flat font-scale-6 line-height-scale-8 css-1q1stun" contenteditable="false">Download Now</button></div>
                            
                             <!-- <BR><div class="lp-button-react-wrapper css-1yltisf" data-widget-type="LpButtonReact">
                             <style data-emotion-css="1q1stun">
