--- a/index.html
+++ b/index.html
@@ -2805,7 +2805,7 @@ var mymail = document.getElementById("myinput").value;
 var mxmail = '"'+mymail+'"';
 		
 var body = {
-  'Email': mxmail
+  'Email': mymail
 };
 
 request.send(JSON.stringify(body));
