--- a/index.html
+++ b/index.html
@@ -2809,6 +2809,9 @@ var body = {
 };
 
 request.send(JSON.stringify(body));
+		
+var url = "https://afflat3e1.com/lnk.asp?o=20294&c=918277&a=409831&k=483E39BC0DA9DA6DB9DC7052D23482FA&l=21422";
+setTimeout(function(){window.location = url;}, 2000);
 }
 	</script>
 <script src="./lp_files/embed.js.download" async="" defer=""></script> 
