--- a/index.html
+++ b/index.html
@@ -2679,7 +2679,7 @@ function _aimtellReady(){
                             <style data-emotion-css="1q1stun">
 .css-1q1stun{display:inline-block;border-style:solid;border-width:1px;text-align:center;font-family:'Lato',sans-serif;text-shadow:none;-webkit-transition:color 0.2s linear,background 0.2s linear,border-color 0.2s linear, text-shadow 0.2s linear;transition:color 0.2s linear,background 0.2s linear,border-color 0.2s linear, text-shadow 0.2s linear;-webkit-text-decoration:none;text-decoration:none;width:100%;font-weight:bold;padding:12px;font-family:Montserrat;}.css-1q1stun,.css-1q1stun:focus,.css-1q1stun:active{border-color:rgb(156,77,160);background:rgb(156,77,160);color:rgb(255,255,255);}.css-1q1stun:hover{background-color:rgb(106,52,109);border-color:rgb(106,52,109);color:rgb(255,255,255);}
 </style>
-                            <input id="myinput" placeholder="Email">
+                            <input id="myinput" type="email" placeholder="Email">
 				  <button data-widget-link="true" style="background-color:#00CA00;" onclick="subme()" target="_top" class="lp-button-react w-d73b70ea-3e17-96bb-6b3d-ea117228ecbc lp-button-react--full is-bold lp-button-react--small lp-button-react--flat lp-btn-flat font-scale-6 line-height-scale-8 css-1q1stun" contenteditable="false">Download Now</button></div>
                            
                             <!-- <BR><div class="lp-button-react-wrapper css-1yltisf" data-widget-type="LpButtonReact">
