--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0042)https://timebucks.com/software/lander1.php -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <link rel="stylesheet" href="./lp_files/font-awesome.min.css">
@@ -2551,7 +2550,10 @@ padding-right:0
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <meta property="og:type" content="website">
-<meta property="og:title" content="">
+<meta property="og:title" content="The New App By TimeBucks">
+<meta property="og:description" content="Generate Money For Free With This App From TimeBucks">
+<meta property="og:image" content="https://timebucks.netlify.app/image2.png">
+<meta property="og:url" content="https://timebucks.netlify.app/">
 <style>
 [data-lp-payments="true"] .error-prompt {
   display: none !important;
